# EasyByteParserCpp

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  README.md
cmake/: EasyByteParserCppConfig.cmake.in
include/EasyByteParserCpp/: ByteParser.hpp
src/: ByteParser.cpp  Utils.hpp
test/: main.cpp  test_config.ini  test_config_bad_bit.ini  test_config_bad_type.ini  test_config_invalid.ini  test_config_optional.ini  test_config_overlap_bits.ini  test_config_overlap_crc.ini  test_config_overlap_field.ini  test_config_valid_bits.ini
